# Simple-Bencode-Parser

./: Readme.md  common.hpp
include/: isValidTorrentFile.hpp  logger.hpp  readTorrentFile.hpp
src/: CMakeLists.txt  isValidTorrentFile.cpp  logger.cpp  readTorrentFile.cpp
test/: run  test.torrent  testIsValidTorrentFunctionality.cpp  testReadTorrentFile.cpp
